# advent-of-code-data

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
aocd/: _ipykernel.py  cli.py  cookies.py  examples.py  exceptions.py  models.py  runner.py  types.py
tests/: test_models.py  test_runner.py  test_submit.py
