[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-of-code-data"
version = "2.0.4"
description = "Get your puzzle data with a single import"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "aocd-example-parser>=2023.2",
    "beautifulsoup4",
    "pebble",
    "tzdata ; platform_system == 'Windows'",
    "urllib3",
]

[[project.authors]]
name = "Wim Jeantine-Glenn"
email = "hey@wimglenn.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/wimglenn/advent-of-code-data"

[project.optional-dependencies]
nb = [
    "ipython",
    "jupyter-server",
]
cookies = [
    "browser_cookie3",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "numpy>=2.0.2",
    "pook>=2.1.2",
    "pyright>=1.1.390",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-freezer>=0.4.9",
    "pytest-mock>=3.14.0",
    "pytest-raisin>=0.4",
    "pytest-socket>=0.7.0",
    "rich>=13.9.4",
]

[project.scripts]
aocd = "aocd.cli:main"
aoc = "aocd.runner:main"
aocd-token = "aocd.cookies:scrape_session_tokens"
aoce = "aocd.examples:main"

[tool.hatch.build.targets.wheel]
packages = ["aocd"]

[project.entry-points]
"adventofcode.user" = {}  # for user solvers
"adventofcode.examples" = {}  # for example-parser implementations

[tool.pytest.ini_options]
addopts = """
  --strict-markers
  --disable-socket
  --allow-unix-socket
  --cov-branch
  --cov=aocd --cov=tests
  --cov-report=html --cov-report=term-missing:skip-covered"""
xfail_strict = true
markers = "answer_not_cached"

[tool.coverage.report]
exclude_also = [
    "if t\\.TYPE_CHECKING:"
]

[tool.pyright]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true
